UI alignment issues fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,6 +61,7 @@ p {
   margin: 82px auto 32px;
   padding: 100px;
   position: relative;
+  min-height: 41vh;
   max-width: 960px;
   flex-direction: column;
   align-items: center;
