--- a/src/app/public/components/header/header.component.scss
+++ b/src/app/public/components/header/header.component.scss
@@ -10,6 +10,7 @@
   left: 0px;
   right: 0px;
   margin-top: 0px;
+  z-index: 1000;
 }
 
 .toolbar button {
